aboutus page modified

--- a/pages/About Us.html
+++ b/pages/About Us.html
@@ -36,10 +36,10 @@
             <div class="nav-bar">
                 <nav class="navbar">
                     <a href="index.html" class="nav home">Home</a>
-                    <a href="./pages/products.html" class="nav products">Products</a>
-                    <a href="./pages/About Us.html" class="nav About Us">About Us</a>
-                    <a href="./pages/Services.html" class="nav Services">Services</a>
-                    <a href="./pages/Help.html" class="nav Help">Help</a>
+                    <a href="products.html" class="nav products">Products</a>
+                    <a href="About Us.html" class="nav About Us">About Us</a>
+                    <a href="Services.html" class="nav Services">Services</a>
+                    <a href="Help.html" class="nav Help">Help</a>
         </div>
         <div class="main">
             <div class="about">
