--- a/pages/products.html
+++ b/pages/products.html
@@ -35,11 +35,11 @@
             </div>
             <div class="nav-bar">
                 <nav class="navbar">
-                    <a href="../index.html" class="nav homepage">Home</a>
-                    <a href="../pages/products.html" class="nav productspage">Products</a>
-                    <a href="../pages/About Us.html" class="nav About Us">About Us</a>
-                    <a href="../pages/Services.html" class="nav Services">Services</a>
-                    <a href="../pages/Help.html" class="nav Help">Help</a>
+                    <a href="index.html" class="nav home">Home</a>
+                    <a href="products.html" class="nav products">Products</a>
+                    <a href="About Us.html" class="nav About Us">About Us</a>
+                    <a href="Services.html" class="nav Services">Services</a>
+                    <a href="Help.html" class="nav Help">Help</a>
                 </nav>
             </div>
         </div>
