--- a/pages/Help.html
+++ b/pages/Help.html
@@ -35,7 +35,7 @@
             </div>
             <div class="nav-bar">
                 <nav class="navbar">
-                    <a href="index.html" class="nav home">Home</a>
+                    <a href="../index.html" class="nav home">Home</a>
                     <a href="products.html" class="nav products">Products</a>
                     <a href="About Us.html" class="nav About Us">About Us</a>
                     <a href="Services.html" class="nav Services">Services</a>
