--- a/pages/products.html
+++ b/pages/products.html
@@ -36,8 +36,8 @@
             <div class="nav-bar">
                 <nav class="navbar">
                     <a href="../index.html" class="nav home">Home</a>
-                    <a href="products.html" class="nav products">Products</a>
-                    <a href="About Us.html" class="nav About Us">About Us</a>
+                    <a href=".products.html" class="nav products">Products</a>
+                    <a href=".About Us.html" class="nav About Us">About Us</a>
                     <a href="Services.html" class="nav Services">Services</a>
                     <a href="Help.html" class="nav Help">Help</a>
                 </nav>
